# experiment-2025-coop-comp-perception

./: pyproject.toml
src/: run_visual.py
src/env/: custom_environment.py
src/sim/: movement.py  renderer.py  sensors.py  world.py
