[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Martina Baiardi",email = "m.baiardi@unibo.it"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pettingzoo (>=1.25.0,<2.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "poetry (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true
